--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
+ValueShapes = "0.11"
 julia = "1.9"
 
 [extras]
