--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,22 @@ ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
 julia = "1.9"
+BAT = "3"
+CSV = "0.10"
+DataFrames = "1"
+DensityInterface = "0.4"
+Distances = "0.10"
+Distributions = "0.25"
+Folds = "0.2"
+HypothesisTests = "0.11"
+IntervalSets = "0.7"
+JSON = "0.21"
+LinearAlgebra = "1"
+Plots = "1"
+Statistics = "1"
+StatsBase = "0.33, 034"
+StructArrays = "0.6, 0.7"
+ValueShapes = "0.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
